# Zephyr

./: CMakeLists.txt  README.md  checklist.md  compile_commands.json
.cache/clangd/index/: main.cpp.23EDB9BED80C2F81.idx  z_serialize.cpp.56FA1FDBD2B8FB4A.idx  z_serialize.h.1D8EABCF5DDD7625.idx
examples/threading/: exec  thread.cpp
include/details/: type_list.h
include/events/: events.h
include/serialize/: z_serialize.h
include/server/: server_init.h
include/utils/: loglevels.h
lib/events/: CMakeLists.txt  events.cpp
lib/serialize/: CMakeLists.txt  z_serialize.cpp
lib/server/: CMakeLists.txt  server_init.cpp
lib/utils/: exec
src/: exec  main.cpp  main.s  test  test.cpp
src/utils/: loglevels.cpp
